# HOSPITAL_MANAGEMENT_SYSTEM

./: .gitignore  .gitignore.txt  CMakeLists.txt  Database.h  Patient.h  README.md  STAFF.cpp  STAFF.h  auth.cpp  auth.h  doctor.cpp  doctor.h  main.cpp  patient.cpp  report.cpp  report.h  setup.py
